[gd_scene load_steps=4 format=3 uid="uid://yapixm3u2i10"]

[ext_resource type="Script" uid="uid://bi3rnjboi2anj" path="res://Town/town.gd" id="1_town"]
[ext_resource type="PackedScene" uid="uid://bf8daa6ebu7bo" path="res://Player/Player.tscn" id="2_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(1920, 64)

[node name="Town" type="Node2D"]
script = ExtResource("1_town")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -960.0
offset_top = -32.0
offset_right = 960.0
offset_bottom = 32.0
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(0, 400)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShopUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/ShopUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ShopUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
text = "商店"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="HealthPotion" type="Button" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
text = "生命药水 - 50金币"

[node name="FuelTank" type="Button" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
text = "燃料罐 - 100金币"

[node name="Dynamite" type="Button" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
text = "炸药 - 200金币"

[node name="CargoUpgrade" type="Button" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
text = "背包升级 - 500金币"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2

[node name="ToMine" type="Button" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
text = "前往矿洞"

[node name="StatusLabel" type="Label" parent="CanvasLayer/ShopUI/Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="CurrencyLabel" type="Label" parent="CanvasLayer/ShopUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 46.0
text = "金币: 0"
